ngcca-application/ngcca-application-starter/src/test/resources/io/hotcloud/application/api/template/mysql.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql
  namespace: 5b2378dc5d2f4eedb55ed9217255c8cd
  labels:
    app.business.data/id: 5b2378dc5d2f4eedb55ed9217255c8cd
spec:
  selector:
    matchLabels:
      app: mysql
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: mysql
    spec:
      containers:
        - image: mysql:8.0
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              memory: "128Mi"
              cpu: "125m"
            limits:
              memory: "512Mi"
              cpu: "250m"
          name: mysql
          env:
            - name: MYSQL_ROOT_PASSWORD
              value: passw0rd
          ports:
            - containerPort: 3306
              name: mysql
          volumeMounts:
            - name: mysql-persistent-storage
              mountPath: /var/lib/mysql
      volumes:
        - name: mysql-persistent-storage
          emptyDir: { }
---
apiVersion: v1
kind: Service
metadata:
  name: mysql
  namespace: 5b2378dc5d2f4eedb55ed9217255c8cd
spec:
  ports:
    - port: 3306
      protocol: TCP
      targetPort: 3306
  selector:
    app: mysql
  type: NodePort
