ngcca-application/ngcca-application-starter/src/test/resources/io/hotcloud/application/api/template/rabbitmq.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rabbitmq
  namespace: 5b2378dc5d2f4eedb55ed9217255c8cd
  labels:
    app.business.data/id: 5b2378dc5d2f4eedb55ed9217255c8cd
spec:
  selector:
    matchLabels:
      app: rabbitmq
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: rabbitmq
    spec:
      containers:
        - image: rabbitmq:3.9-management
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              memory: "128Mi"
              cpu: "125m"
            limits:
              memory: "512Mi"
              cpu: "250m"
          name: rabbitmq
          env:
            - name: RABBITMQ_DEFAULT_PASS
              value: passw0rd
            - name: RABBITMQ_DEFAULT_USER
              value: admin
          ports:
            - containerPort: 5672
              name: rabbitmq
            - containerPort: 15672
              name: management
          volumeMounts:
            - name: rabbitmq-persistent-storage
              mountPath: /var/lib/rabbitmq
      volumes:
        - name: rabbitmq-persistent-storage
          emptyDir: { }
---
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq
  namespace: 5b2378dc5d2f4eedb55ed9217255c8cd
spec:
  ports:
    - port: 5672
      protocol: TCP
      targetPort: 5672
      name: rabbitmq
    - port: 15672
      protocol: TCP
      targetPort: 15672
      name: management
  selector:
    app: rabbitmq
  type: NodePort
