ngcca-application/ngcca-application-starter/src/test/resources/io/hotcloud/application/api/template/redis.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redis
  namespace: 5b2378dc5d2f4eedb55ed9217255c8cd
  labels:
    app.business.data/id: 5b2378dc5d2f4eedb55ed9217255c8cd
spec:
  selector:
    matchLabels:
      app: redis
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: redis
    spec:
      containers:
        - image: redis:7.0
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              memory: "128Mi"
              cpu: "125m"
            limits:
              memory: "512Mi"
              cpu: "250m"
          name: redis
          command:
            - redis-server
            - "/redis-master/redis.conf"
          env:
            - name: MASTER
              value: "true"
          ports:
            - containerPort: 6379
              name: redis
          volumeMounts:
            - mountPath: /redis-master
              name: config
            - name: redis-persistent-storage
              mountPath: /data
      volumes:
        - name: config
          configMap:
            name: redis
            items:
              - key: redis-config
                path: redis.conf
        - name: redis-persistent-storage
          emptyDir: { }
---
apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: 5b2378dc5d2f4eedb55ed9217255c8cd
spec:
  ports:
    - port: 6379
      protocol: TCP
      targetPort: 6379
      name: redis
  selector:
    app: redis
  type: NodePort
---
apiVersion: v1
kind: ConfigMap
metadata:
  name: redis
  namespace: 5b2378dc5d2f4eedb55ed9217255c8cd
data:
  redis-config: |
    requirepass passw0rd
    bind 0.0.0.0
    pidfile "/var/run/redis_6379.pid"
    dbfilename "dump.rdb"
    dir "/data"
    appendonly yes
    appendfilename "appendonly.aof"
    aof-use-rdb-preamble yes
