ngcca-application/ngcca-application-starter/src/test/resources/io/hotcloud/application/api/template/redisinsight.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: redisinsight
  namespace: 5b2378dc5d2f4eedb55ed9217255c8cd
  labels:
    app: redisinsight
    app.business.data/id: 5b2378dc5d2f4eedb55ed9217255c8cd
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: redisinsight
  template:
    metadata:
      labels:
        app: redisinsight
    spec:
      volumes:
        - name: db
          emptyDir: { }
      initContainers:
        - name: init
          image: harbor.local:5000/library/busybox:latest
          command:
            - /bin/sh
            - '-c'
            - 'chown -R 1001 /db'
          resources: { }
          volumeMounts:
            - name: db
              mountPath: /db
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
      containers:
        - name: redisinsight
          image: redislabs/redisinsight:latest
          imagePullPolicy: IfNotPresent
          resources:
            requests:
              memory: "128Mi"
              cpu: "125m"
            limits:
              memory: "512Mi"
              cpu: "250m"
          volumeMounts:
          - name: db
            mountPath: /db
          ports:
          - containerPort: 8001
            protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: redisinsight-service
  namespace: 5b2378dc5d2f4eedb55ed9217255c8cd
spec:
  type: NodePort
  ports:
    - port: 8001
      targetPort: 8001
  selector:
    app: redisinsight
